# rust-template

./: Cargo.toml
nix/modules/: template.nix
src/: main.rs
